Styled placeannouncement fixed header alignements,icon alignemnts

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -722,6 +722,26 @@ video {
   margin-top: -4.5rem;
 }
 
+.ml-\[39rem\] {
+  margin-left: 39rem;
+}
+
+.ml-\[35rem\] {
+  margin-left: 35rem;
+}
+
+.ml-\[37rem\] {
+  margin-left: 37rem;
+}
+
+.ml-\[58rem\] {
+  margin-left: 58rem;
+}
+
+.ml-\[60rem\] {
+  margin-left: 60rem;
+}
+
 .block {
   display: block;
 }
